# Mahmoud-Gadalla

./: .diffgate.json  .env.example  .gitattributes  .gitignore  .gitmodules  .mcp.json  AGENTS.md  ANA_BLUEPRINT.md  CLAUDE.md  MY4_Education_Ministry_Proposal.pptx  README.md  SECURITY.md  build_proposal.py  pyproject.toml
Flare/: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  Directory.Build.props  LICENSE.txt  README.md
Flare/.github/: actionlint.yml  ci-rerun-trigger.txt  copilot-instructions.md
Flare/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  question.yml
Flare/.github/agents/: pr-monitor.agent.md
Flare/.github/chatmodes/: Autonomous Agent.chatmode.md
Flare/.github/ci_monitor/: auto_retrigger.ps1  monitor.ps1
Flare/.github/workflows/: agentic-auto-fix.lock.yml  agentic-auto-fix.md  agentic-auto-fix.yml  ci-status-aggregator.yml  ci.yml  copilot-setup-steps.yml  nightly.yml  publish_chocolatey.yml  publish_on_release.yml  sync_upstream.yml  workflow_actionlint.yml  workflow_linux.yml  workflow_macos.yml  workflow_windows.yml
Flare/actionlint/: 3_Run actionlint.txt
Flare/ci-scripts/windows/: FlareRegistrySetup.bat  setup-deps.cmd
Flare/cmake/: SanitizeVcpkgLogs.cmake
Flare/doc/: FLASH_SUPPORT.md  IMPLEMENTATION_COMPLETE.md  how_to_build_linux.md  how_to_build_macosx.md  how_to_build_win.md  how_to_build_win_chs.md  how_to_build_win_ja.md  how_to_import_swf.md
Flare/flare/install/: SystemVar.ini  package_sdk.sh
Flare/flare/sources/: CMakeLists.txt
Flare/packaging/chocolatey/: flare.nuspec
Flare/packaging/windows/: installer.nsi
Flare/plugins/blur/: CMakeLists.txt
Flare/plugins/geom/: CMakeLists.txt
Flare/plugins/multiplugin/: CMakeLists.txt
Flare/scripts/: log_watcher.py
Flare/stuff/doc/: TileIwa.html  particlesFx.html
Flare/tools/flash/: import_container.py  lint_repo_scripts.py  xfl_handler.py
Flare/tools/rebrand/: check_openToonz_presence.py  rename_to_flare.py  replace_openToonz_in_source.py  replace_openToonz_in_translations.py  replace_toonz_paths.ps1
Flare/tools/sync/: upstream_agent.py
claude-code-queue/: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.py
claude-code-queue/claude-prompt-box/: Cargo.toml
claude-code-queue/src/: __init__.py
claude-code-queue/src/claude_code_queue/: batch.py  claude_interface.py  cli.py  models.py  queue_manager.py  storage.py
claude-code-queue/tests/: conftest.py  test_batch.py  test_claude_interface.py  test_cli.py  test_fault_tolerance.py  test_models.py  test_queue_manager.py  test_skill.py  test_skill_integration.py  test_storage.py
nuclear-grade-context-engineering/: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  CORE.md  DISCLAIMER.md  EXAMPLES.md  GOVERNANCE.md  HOOKS.md  INSTALL.md  INTEGRATIONS.md  LICENSE  MAXIMS.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  SKILLS.md  SUPPORT.md  WORKFLOWS.md  install.sh  nuclear-grade.yaml  pyproject.toml
nuclear-grade-context-engineering/.claude-plugin/: marketplace.json  plugin.json
nuclear-grade-context-engineering/.codex-plugin/: plugin.json
nuclear-grade-context-engineering/.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
nuclear-grade-context-engineering/.github/ISSUE_TEMPLATE/: agent_near_miss.md  bug_report.md  docs_or_methodology.md
nuclear-grade-context-engineering/.github/workflows/: ci.yml
nuclear-grade-context-engineering/.nuclear/: charter.md
nuclear-grade-context-engineering/agents/: README.md  educator.md  judge.md  observer.md  planner.md  runner.md
nuclear-grade-context-engineering/commands/: ng-baseline.md  ng-breakdown.md  ng-classify.md  ng-close-packet.md  ng-code-review.md  ng-context-pack.md  ng-decide-authority.md  ng-deficiency.md  ng-drift-check.md  ng-folders.md  ng-impact.md  ng-incident.md  ng-intent.md  ng-learn.md  ng-legal-check.md  ng-new.md  ng-prove.md  ng-question.md  ng-red-team.md  ng-self-check.md  ng-ship-review.md  ng-source-check.md  ng-trace.md  ng-trust-check.md  ng-turnover.md  ng-what-to-control.md
nuclear-grade-context-engineering/docs/: README.md  diagrams.md  glossary.md
nuclear-grade-context-engineering/docs/00-standards-foundation/: artifact-dependency-graph.md  compliance-boundaries.md  core-source-rationale.md  do-not-cite-directly.md  flyfission-ops-knowledge-graph-usage.md  public-citation-strategy.md  source-map.md
nuclear-grade-context-engineering/docs/01-field-guide/: leadership-and-high-reliability.md  source-to-concept-crosswalk.md
nuclear-grade-context-engineering/docs/02-operating-system/: activation-thresholds.md  agent-threat-model.md  agent-trace-evidence.md  agentic-workflow-architecture.md  authority-and-intent.md  baselines.md  change-control-packets.md  change-impact.md  configuration-management.md  context-packs.md  context-window-discipline.md  controlled-items.md  critical-systems.md  deficiency-register.md  durable-memory.md  hpi-overlays.md  incident-response.md  lifecycle.md  modes.md  program-self-assessment.md  rebaseline.md  red-team-review.md  risk-tiers-and-modes.md  runtime-enforcement.md  thin-evidence-spine.md  token-burn-control.md  validators.md  variance-and-drift.md  work-breakdown-and-folders.md  work-type-lens.md
nuclear-grade-context-engineering/hooks/: session_start.py  user_prompt_submit.py
nuclear-grade-context-engineering/nuclear_grade/: __init__.py  cli.py  efficacy.py  gen_commands.py  mcp_server.py  metrics.py  ng_validate.py  tokens.py
nuclear-grade-context-engineering/starter-kit/: README.md
nuclear-grade-context-engineering/templates/: README.md
nuclear-grade-context-engineering/tests/: test_agents.py  test_codex_plugin_packaging.py  test_command_contracts.py  test_command_parity.py  test_efficacy.py  test_hooks.py  test_mcp_server.py  test_metrics.py  test_ng_cli.py  test_ng_validate.py  test_packaging.py  test_plugin_packaging.py  test_public_docs.py  test_skill_contracts.py  test_tokens.py
nuclear-grade-context-engineering/tools/: README.md  __init__.py  install-codex.py  ng.py  ng_validate.py
(+3115 files in other folders)
