[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-code-queue"
version = "0.4.3"
description = "Queue Claude Code prompts and execute them when token limits reset."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Justin Cheah", email="justinwoody1234@gmail.com" }
]
dependencies = [
  "PyYAML >= 6.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-mock"]
eval = ["pytest", "pytest-mock", "anthropic>=0.40.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
claude_code_queue = ["py.typed", "skills/**/*"]


[project.scripts]
claude-queue = "claude_code_queue.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
